# snake

./: CMakeLists.txt  REMAND.md  a.out
include/: Animation.hpp  Food.hpp  Skills.hpp  State.hpp  Timer.hpp  gaobject.hpp  snake.hpp
src/: Food.cpp  Skills.cpp  State.cpp  gaobject.cpp  main.cpp  snake.cpp
